syntax = "proto3";

package com.sangsiklog.service.like;

import "common/common.proto";

service LikeService {
  rpc addKnowledgeLike(KnowledgeLikeAddRequest) returns (KnowledgeLikeAddResponse);
  rpc removeKnowledgeLike(KnowledgeLikeRemoveRequest) returns (KnowledgeLikeRemoveResponse);
}

message KnowledgeLikeAddRequest {
  int64 knowledgeId = 1;
  int64 userId = 2;
}

message KnowledgeLikeAddResponse {
  int64 likeId = 1;
}

message KnowledgeLikeRemoveRequest {
  int64 knowledgeId = 1;
  int64 userId = 2;
}

message KnowledgeLikeRemoveResponse {
  int64 likeId = 1;
}

message LikeDetail {
  int64 likeId = 1;
  int64 knowledgeId = 2;
  int64 userId = 3;
}